log
Thu Mar 19 07:12:54 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c:1:3: error: stray ‘#’ in program
    1 | te#include <stdio.h>
      |   ^
exercises.c:1:1: error: unknown type name ‘te’
    1 | te#include <stdio.h>
      | ^~
exercises.c:1:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
    1 | te#include <stdio.h>
      |            ^
f74ba34
Thu Mar 19 07:13:13 PM UTC 2026: 
Compilation failed
In file included from test.c:5:
exercises.c:1:3: error: stray ‘#’ in program
    1 | te#include <stdio.h>
      |   ^
exercises.c:1:1: error: unknown type name ‘te’
    1 | te#include <stdio.h>
      | ^~
exercises.c:1:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
    1 | te#include <stdio.h>
      |            ^
2e104ff
Thu Mar 19 07:13:31 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
4a04127
